# ChangeLog for sys-kernel/hardened-sources
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.409 2011/04/20 23:38:06 blueness Exp $

*hardened-sources-2.6.38-r1 (20 Apr 2011)

  20 Apr 2011; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.38-r1.ebuild:
  Based on 2.6.38.3 + genpatches-2.6.38-3 +
  grsecurity-2.2.2-2.6.38.3-201104191737

*hardened-sources-2.6.32-r44 (20 Apr 2011)

  20 Apr 2011; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.32-r44.ebuild:
  Based on 2.6.32.38 + genpatches-2.6.32-36 +
  grsecurity-2.2.2-2.6.32.38-201104191737

  19 Apr 2011; Anthony G. Basile <blueness@gentoo.org>
  hardened-sources-2.6.32-r42.ebuild:
  Stable on ppc64

  18 Apr 2011; Anthony G. Basile <blueness@gentoo.org>
  hardened-sources-2.6.37-r7.ebuild:
  Stable on amd64, x86

  18 Apr 2011; Anthony G. Basile <blueness@gentoo.org>
  hardened-sources-2.6.32-r42.ebuild:
  Stable on amd64, x86

  29 Mar 2011; Anthony G. Basile <blueness@gentoo.org>
  -hardened-sources-2.6.37.ebuild, -hardened-sources-2.6.37-r1.ebuild,
  -hardened-sources-2.6.37-r2.ebuild, -hardened-sources-2.6.37-r3.ebuild,
  -hardened-sources-2.6.37-r4.ebuild:
  Removed deprecated hardened-sources-2.6.37-rX versions

  29 Mar 2011; Anthony G. Basile <blueness@gentoo.org>
  -hardened-sources-2.6.32-r35.ebuild, -hardened-sources-2.6.32-r36.ebuild,
  -hardened-sources-2.6.32-r37.ebuild, -hardened-sources-2.6.32-r38.ebuild,
  -hardened-sources-2.6.32-r39.ebuild, -hardened-sources-2.6.32-r40.ebuild:
  Removed deprecated hardened-sources-2.6.32-rX versions

*hardened-sources-2.6.38 (29 Mar 2011)

  29 Mar 2011; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.38.ebuild:
  Based on 2.6.38.2 + genpatches-2.6.38.2 +
  grsecurity-2.2.2-2.6.38.2-201103281752

*hardened-sources-2.6.32-r43 (29 Mar 2011)

  29 Mar 2011; Anthony G. Basile <blueness@gentoo.org>